--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@codemirror/lang-javascript": "^6.2.1",
     "@codemirror/lang-python": "^6.1.3",
     "@radix-ui/themes": "^2.0.0",
+    "@uiw/codemirror-theme-github": "^4.21.20",
     "@uiw/react-codemirror": "^4.21.20",
     "cm6-theme-solarized-dark": "^0.2.0",
     "codemirror": "^6.0.1",
-    "next": "13.5.6",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^13.5.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -25,7 +27,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6",
+    "eslint-config-next": "^13.5.6",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
