--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@uiw/react-codemirror": "^4.21.20",
     "cm6-theme-solarized-dark": "^0.2.0",
     "codemirror": "^6.0.1",
+    "github-markdown-css": "^5.3.0",
     "next": "^13.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.0",
+    "remark-gfm": "^4.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
