--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/themes": "^2.0.0",
     "@uiw/codemirror-theme-github": "^4.21.20",
     "@uiw/react-codemirror": "^4.21.20",
+    "clsx": "^2.0.0",
     "cm6-theme-solarized-dark": "^0.2.0",
     "codemirror": "^6.0.1",
     "github-markdown-css": "^5.3.0",
@@ -22,13 +23,16 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.0",
     "remark-gfm": "^4.0.0",
+    "tailwindcss-radix": "^2.8.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "daisyui": "^3.9.4",
     "eslint": "^8",
     "eslint-config-next": "^13.5.6",
     "postcss": "^8",
